[gd_scene load_steps=16 format=3 uid="uid://cs80bcxars8no"]

[ext_resource type="Script" uid="uid://ujexjqu3nqyq" path="res://Script/menu_pause.gd" id="1_br3tv"]
[ext_resource type="PackedScene" uid="uid://bxqa2pkby23y" path="res://Assets/End_tile.glb" id="1_dtarm"]
[ext_resource type="PackedScene" uid="uid://slc0eh0ha02g" path="res://Assets/Path_tile.glb" id="2_br3tv"]
[ext_resource type="PackedScene" uid="uid://d8ps6rjvqf6k" path="res://Assets/Start_tile.glb" id="3_okdnh"]
[ext_resource type="PackedScene" uid="uid://y0mymxpnfmuu" path="res://Assets/Base.glb" id="4_kgi2c"]
[ext_resource type="PackedScene" uid="uid://dx4y47llvp7fo" path="res://Assets/Tower_tile.glb" id="5_5mtg6"]
[ext_resource type="PackedScene" uid="uid://xrta5qlxdpdp" path="res://Assets/Tile.glb" id="6_d58y0"]
[ext_resource type="PackedScene" uid="uid://bofqlxdsww1ul" path="res://Assets/Enemy_spawn.glb" id="7_efttf"]
[ext_resource type="Script" uid="uid://b0lqgpc5ir5xx" path="res://Script/spawner.gd" id="8_hidya"]
[ext_resource type="PackedScene" uid="uid://djcdo3durjbty" path="res://Scenes/Enemy/Enemy.tscn" id="9_mmw27"]
[ext_resource type="Script" uid="uid://c8saeu4ulhqdq" path="res://Script/game_manager.gd" id="10_map2"]
[ext_resource type="Script" uid="uid://cet2dwem37oun" path="res://Script/Waves/wave_manager.gd" id="11_map2"]
[ext_resource type="PackedScene" path="res://Scenes/UI/background.tscn" id="12_kgi2c"]

[sub_resource type="Curve3D" id="Curve3D_5yc7q"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 5.998664, 0, 0.99374133, 0, 0, 0, 0, 0, 0, 3.0025876, 0, 0.98319167, 0, 0, 0, 0, 0, 0, 2.992038, 0, 4.0320153, 0, 0, 0, 0, 0, 0, 0.97707105, 0, 4.0214663, 0, 0, 0, 0, 0, 0, 0.99817014, 0, 0.99374133, 0, 0, 0, 0, 0, 0, -0.014587641, 0, 1.0148404, 0, 0, 0, 0, 0, 0, 0.02761054, 0, 0.0020821956),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0)
}
point_count = 7

[sub_resource type="Curve3D" id="Curve3D_7sy4k"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 6.0092125, 0, 3.0192578, 0, 0, 0, 0, 0, 0, 4.9964542, 0, 2.9770591, 0, 0, 0, 0, 0, 0, 5.0070047, 0, 3.9370697, 0, 0, 0, 0, 0, 0, 0.9665215, 0, 3.979268, 0, 0, 0, 0, 0, 0, 0.9665215, 0, 0.99374133, 0, 0, 0, 0, 0, 0, -0.0040385723, 0, 0.972642, 0, 0, 0, 0, 0, 0, 0.02761054, 0, 0.01263174),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0)
}
point_count = 7

[sub_resource type="LabelSettings" id="LabelSettings_map2"]
paragraph_spacing = 2.0
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_br3tv")

[node name="GridMap" type="GridMap" parent="."]

[node name="End_tile" parent="GridMap" instance=ExtResource("1_dtarm")]

[node name="Path_tile" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="Path_tile2" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)

[node name="Path_tile5" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 2)

[node name="Path_tile6" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 3)

[node name="Path_tile7" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 4)

[node name="Path_tile8" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 4)

[node name="Path_tile9" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 4)

[node name="Path_tile12" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 4)

[node name="Path_tile13" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 4)

[node name="Path_tile15" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 3)

[node name="Path_tile10" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 3)

[node name="Path_tile11" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 2)

[node name="Path_tile3" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 1)

[node name="Path_tile4" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 1)

[node name="Path_tile14" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 1)

[node name="Path_tile16" parent="GridMap" instance=ExtResource("2_br3tv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 1)

[node name="Start_tile" parent="GridMap" instance=ExtResource("3_okdnh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 1)

[node name="Start_tile2" parent="GridMap" instance=ExtResource("3_okdnh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 3)

[node name="Base" parent="GridMap" instance=ExtResource("4_kgi2c")]

[node name="Tower_tile" parent="GridMap" instance=ExtResource("5_5mtg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Tower_tile2" parent="GridMap" instance=ExtResource("5_5mtg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="Tower_tile3" parent="GridMap" instance=ExtResource("5_5mtg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="Tower_tile4" parent="GridMap" instance=ExtResource("5_5mtg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="Tower_tile5" parent="GridMap" instance=ExtResource("5_5mtg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 2)

[node name="Tower_tile6" parent="GridMap" instance=ExtResource("5_5mtg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 3)

[node name="Tower_tile7" parent="GridMap" instance=ExtResource("5_5mtg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)

[node name="Tower_tile8" parent="GridMap" instance=ExtResource("5_5mtg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="Tower_tile9" parent="GridMap" instance=ExtResource("5_5mtg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)

[node name="Tile" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)

[node name="Tile2" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 2)

[node name="Tile3" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Tile4" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="Tile5" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="Tile6" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 5)

[node name="Tile7" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 5)

[node name="Tile8" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 5)

[node name="Tile9" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 5)

[node name="Tile10" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 5)

[node name="Tile11" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 4)

[node name="Tile20" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 2)

[node name="Tile21" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)

[node name="Tile22" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 1)

[node name="Tile23" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 3)

[node name="Tile12" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 2)

[node name="Tile13" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)

[node name="Tile14" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -1)

[node name="Tile15" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -1)

[node name="Tile16" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -1)

[node name="Tile17" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)

[node name="Tile18" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Tile19" parent="GridMap" instance=ExtResource("6_d58y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 3)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.49999997, 0.86602545, 0, -0.86602545, 0.49999997, 3, 4, 4.25)
projection = 1
current = true
size = 7.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 3.7510424, 7.606289, 1.0152483)

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_5yc7q")

[node name="Enemy_spawn" parent="Path3D" node_paths=PackedStringArray("path_node", "game_manager") instance=ExtResource("7_efttf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 1)
script = ExtResource("8_hidya")
enemy_scene = ExtResource("9_mmw27")
path_node = NodePath("..")
game_manager = NodePath("../../GameManager")
auto_start = false

[node name="Path3D2" type="Path3D" parent="."]
curve = SubResource("Curve3D_7sy4k")

[node name="Enemy_spawn2" parent="Path3D2" node_paths=PackedStringArray("path_node", "game_manager") instance=ExtResource("7_efttf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 3)
script = ExtResource("8_hidya")
enemy_scene = ExtResource("9_mmw27")
path_node = NodePath("..")
game_manager = NodePath("../../GameManager")
auto_start = false

[node name="GameManager" type="Node3D" parent="." node_paths=PackedStringArray("wave_manager", "ui_label")]
script = ExtResource("10_map2")
wave_manager = NodePath("../WaveManager")
ui_label = NodePath("CanvasLayer/Label")

[node name="CanvasLayer" type="CanvasLayer" parent="GameManager"]

[node name="Label" type="Label" parent="GameManager/CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_map2")

[node name="WaveManager" type="Node3D" parent="." node_paths=PackedStringArray("spawners", "game_manager")]
script = ExtResource("11_map2")
spawners = [NodePath("../Path3D/Enemy_spawn"), NodePath("../Path3D2/Enemy_spawn2")]
game_manager = NodePath("../GameManager")
map_type = "map2"

[node name="Background" parent="." instance=ExtResource("12_kgi2c")]
transform = Transform3D(1, 0, 0, 0, 0.70710677, 0.70710677, 0, -0.70710677, 0.70710677, 4, -7.174141, -11.790375)
